7.4.4. Fixed Arrays.asList() to ListOf()